Introduce AssertJ and string formatting