@@ -148,7 +148,7 @@ public class TopDownDFSTest
         }
         catch(RecursiveContinuationException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         while(testObject.hasNext())
@@ -277,7 +277,7 @@ public class TopDownDFSTest
         }
         catch(RecursiveContinuationException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertTrue(testObject.hasNext());
