@@ -149,7 +149,7 @@ public class TopDownLevelTest
         }
         catch(RecursiveContinuationException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         while(testObject.hasNext())
@@ -278,7 +278,7 @@ public class TopDownLevelTest
         }
         catch(RecursiveContinuationException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertTrue(testObject.hasNext());
