@@ -3,8 +3,8 @@ package fitaview.tree;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Map;
+import org.assertj.core.api.Assertions;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -14,8 +14,8 @@ import fitaview.automaton.Variable;
 public class RecNodeTest
 {
     private RecNode testObject;
-    private Variable variable1 = new Variable(1, "0", "1", "2", "3");
-    private Variable variable2 = new Variable(2, "X", "Y", "Z");
+    private final Variable variable1 = new Variable(1, "0", "1", "2", "3");
+    private final Variable variable2 = new Variable(2, "X", "Y", "Z");
 
     public RecNodeTest()
             throws IllegalVariableValueException
@@ -36,27 +36,30 @@ public class RecNodeTest
         testObject = null;
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testConstructorWhenNullRecursive()
     {
-        testObject = new RecNode(null, 0);
+        Assertions.assertThatThrownBy(() -> new RecNode(null, 0))
+                  .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     public void testToString()
     {
+        // when
         String result = testObject.toString();
-
-        Assert.assertEquals("<@ REC @>", result);
+        // then
+        Assertions.assertThat(result).isEqualTo("<@ REC @>");
     }
 
     @Test
     public void testGetLabel()
     {
+        // when
         String result = testObject.getLabel();
-
-        Assert.assertNotNull(result);
-        Assert.assertEquals("LABEL", result);
+        // then
+        Assertions.assertThat(result).isNotNull();
+        Assertions.assertThat(result).isEqualTo("LABEL");
     }
 
     @Test
@@ -70,18 +73,18 @@ public class RecNodeTest
         }
         catch(UndefinedStateValueException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assertions.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
-        Assert.assertNotNull(result);
-        Assert.assertEquals(Collections.singletonMap(variable1, "3"), result);
+        Assertions.assertThat(result).isNotNull();
+        Assertions.assertThat(result).isEqualTo(Collections.singletonMap(variable1, "3"));
     }
 
-    @Test(expected = UndefinedStateValueException.class)
+    @Test
     public void testGetStateValueWhenNoValue()
-            throws UndefinedStateValueException
     {
-        testObject.getStateValue(variable2);
+        Assertions.assertThatThrownBy(() -> testObject.getStateValue(variable2))
+                  .isInstanceOf(UndefinedStateValueException.class);
     }
 
     @Test
@@ -94,11 +97,11 @@ public class RecNodeTest
         }
         catch(UndefinedStateValueException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assertions.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
-        Assert.assertNotNull(result);
-        Assert.assertEquals("3", result);
+        Assertions.assertThat(result).isNotNull();
+        Assertions.assertThat(result).isEqualTo("3");
     }
 
     @Test
@@ -106,7 +109,7 @@ public class RecNodeTest
     {
         String result = testObject.getStateValueOrNull(variable2);
 
-        Assert.assertNull(result);
+        Assertions.assertThat(result).isNull();
     }
 
     @Test
@@ -114,70 +117,71 @@ public class RecNodeTest
     {
         String result = testObject.getStateValueOrNull(variable1);
 
-        Assert.assertNotNull(result);
-        Assert.assertEquals("3", result);
+        Assertions.assertThat(result).isNotNull();
+        Assertions.assertThat(result).isEqualTo("3");
     }
 
     @Test
     public void testSetStateValueWhenIsValue()
     {
+        // given
         try
         {
             testObject.setStateValue(variable2, "Y");
         }
         catch(IllegalVariableValueException e)
         {
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assertions.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
-
+        // when
         String result = testObject.getStateValueOrNull(variable2);
-
-        Assert.assertNotNull(result);
-        Assert.assertEquals("Y", result);
+        // then
+        Assertions.assertThat(result).isNotNull();
+        Assertions.assertThat(result).isEqualTo("Y");
     }
 
-    @Test(expected = IllegalVariableValueException.class)
+    @Test
     public void testSetStateValueWhenIncorrectValue()
-            throws IllegalVariableValueException
     {
-        testObject.setStateValue(variable2, "N");
+        Assertions.assertThatThrownBy(() -> testObject.setStateValue(variable2, "N"))
+                  .isInstanceOf(IllegalVariableValueException.class);
     }
 
-    @Test(expected = IllegalVariableValueException.class)
+    @Test
     public void testSetStateValueWhenEmptyValue()
-            throws IllegalVariableValueException
     {
-        testObject.setStateValue(variable2, "");
+        Assertions.assertThatThrownBy(() -> testObject.setStateValue(variable2, ""))
+                  .isInstanceOf(IllegalVariableValueException.class);
     }
 
-    @Test(expected = IllegalVariableValueException.class)
+    @Test
     public void testSetStateValueWhenNull()
-            throws IllegalVariableValueException
     {
-        testObject.setStateValue(variable2, null);
+        Assertions.assertThatThrownBy(() -> testObject.setStateValue(variable2, null))
+                  .isInstanceOf(IllegalVariableValueException.class);
     }
 
     @Test
     public void testSetInitialState()
     {
+        // given
         testObject.setInitialState(Arrays.asList(variable1, variable2));
-
+        // when
         String result1 = testObject.getStateValueOrNull(variable1);
         String result2 = testObject.getStateValueOrNull(variable2);
-
-        Assert.assertNotNull(result1);
-        Assert.assertNotNull(result2);
-        Assert.assertEquals(variable1.getInitValue(), result1);
-        Assert.assertEquals(variable2.getInitValue(), result2);
+        // then
+        Assertions.assertThat(result1).isNotNull();
+        Assertions.assertThat(result2).isNotNull();
+        Assertions.assertThat(result1).isEqualTo(variable1.getInitValue());
+        Assertions.assertThat(result2).isEqualTo(variable2.getInitValue());
     }
 
     @Test
     public void testDeleteState()
     {
+        // when
         testObject.deleteState();
-
-        Map<Variable, String> result = testObject.getStateWithNulls();
-
-        Assert.assertTrue(result.isEmpty());
+        // then
+        Assertions.assertThat(testObject.getStateWithNulls()).isEmpty();
     }
 }
